--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^4.1.11",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^5.1.4",
     "vue-tsc": "^2.1.4"
   }
 }
