--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "vue": "^3.4.38",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
     "@types/node": "^24.1.0",
     "@vitejs/plugin-vue": "^5.1.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
+    "vite-plugin-vue-devtools": "^7.7.7",
     "vite-tsconfig-paths": "^5.1.4",
     "vue-tsc": "^2.1.4"
   }
